--- a/index.html
+++ b/index.html
@@ -126,45 +126,49 @@
             <div class="main-cart-wrapper">
                 <div class="cart-left">
                   <img src="./images/cart_image.avif" alt="" width="250px">
-                  <form action="">
-                    <div class="contain-input">
-                      <label for="">Name</label>
-                      <input type="text" name="" id="">
-                    </div>
-                    <div class="contain-input">
-                      <label for="">Name</label>
-                      <input type="text" name="" id="">
-                    </div>
-                    <div class="contain-input">
-                      <label for="">Name</label>
-                      <input type="text" name="" id="">
-                    </div>
-                    <button>Download a simple</button>
-                  </form>
+                  <div class="card-body">
+                    <form action="">
+                      <div class="contain-input">
+                        <label for="">Name</label>
+                        <input type="text" name="" id="">
+                      </div>
+                      <div class="contain-input">
+                        <label for="">Email</label>
+                        <input type="text" name="" id="">
+                      </div>
+                      <div class="contain-input">
+                        <label for="">Password</label>
+                        <input type="text" name="" id="">
+                      </div>
+                      <button class="form-btn">Download a simple</button>
+                    </form>
+                  </div>
                 </div>
                 <div class="cart-right">
                   <h2>The most useful resource <span>ever created for founders.|</span></h2>
                   <p>Using Landkit to build your site means never worrying about designing another page or cross browser compatibility. Our ever-growing library of components and pre-designed layouts will make your life easier.</p>
-                  <div>
-                   <div>
-                    <i class="fa-solid fa-check"></i>
-                    <p>Lifetime updates</p>
+                 <div class="contain-all">
+                  <div class="contain-left">
+                    <div class="contain-all-icon">
+                     <i class="fa-regular fa-circle-check"></i>
+                     <p>Lifetime updates</p>
+                    </div>
+                    <div class="contain-all-icon">
+                     <i class="fa-regular fa-circle-check"></i>
+                     <p>Lifetime updates</p>
+                    </div>
                    </div>
-                   <div>
-                    <i class="fa-solid fa-check"></i>
-                    <p>Lifetime updates</p>
+                   <div class="contain-right">
+                    <div class="contain-all-icon">
+                     <i class="fa-regular fa-circle-check"></i>
+                     <p>Lifetime updates</p>
+                    </div>
+                    <div class="contain-all-icon">
+                     <i class="fa-regular fa-circle-check"></i>
+                     <p>Lifetime updates</p>
+                    </div>
                    </div>
-                  </div>
-                  <div>
-                   <div>
-                    <i class="fa-solid fa-check"></i>
-                    <p>Lifetime updates</p>
-                   </div>
-                   <div>
-                    <i class="fa-solid fa-check"></i>
-                    <p>Lifetime updates</p>
-                   </div>
-                  </div>
+                 </div>
                 </div>
             </div>
             
