add some section

--- a/index.html
+++ b/index.html
@@ -233,15 +233,16 @@
       </div>
       </div>
     </section>
-    <section class="cart-container">
+
+    <section class="main-cart-container">
       <div class="container">
-        <div class="main-cart-wrapper-bottom">
+        <div class="main-cart-wrapper">
           <div class="bottom-left">
             <h2>Stay focused on your business. <span>Let us handle the design.</span></h2>
             <p>You have a business to run. Stop worring about cross-browser bugs, designing new pages, keeping your
               components up to date. Let us do that for you.</p>
-            <div class="">
-              <div class="contain-left">
+            <div class="contain-all">
+              <div class="contain-one">
                 <h3>
                   100%
                 </h3>
@@ -259,12 +260,158 @@
                 </h3>
                 <p>Sales</p>
               </div>
-
-
             </div>
           </div>
           <div class="bottom-right">
             <img src="./images/section-6.png" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="option-container">
+      <div class="container">
+        <div class="option-contain">
+          <div class="option-wrapper-top">
+            <h2>Fair, simple pricing for all.</h2>
+            <p>All types of businesses need access to development resources, so we give you the option to decide how
+              much you need to use.</p>
+            <div class="bottom">
+              <span>Annual</span>
+              <i class="fa-solid fa-toggle-on"></i>
+              <span>Monthly</span>
+            </div>
+          </div>
+          <div class="option-wrapper-bottom">
+            <div class="option-left">
+              <div class="top">
+                <div class="option-contain">
+                  <div class="option-header">
+                    <span class="">Standard</span>
+                  </div>
+                  <div class="option-middle">
+                    <p class="start">$</p>
+                    <span class="middle" data-annual="29" data-monthly="49">29</span>
+                    <span class="end">/mo</span>
+                  </div>
+                  <div class="per-seat">
+                    <p>per seat</p>
+                  </div>
+                  <div class="contain-icon">
+                    <i class="fa-regular fa-circle-check"></i>
+                    <p> Rich, responsive landing pages</p>
+                  </div>
+                  <div class="contain-icon">
+                    <i class="fa-regular fa-circle-check"></i>
+                    <p> 100+ styled components</p>
+                  </div>
+                  <div class="contain-icon">
+                    <i class="fa-regular fa-circle-check"></i>
+                    <p> Flexible, simple license</p>
+                  </div>
+                  <div class="contain-icon">
+                    <i class="fa-regular fa-circle-check"></i>
+                    <p> Speedy build tooling</p>
+                  </div>
+                  <div class="contain-icon">
+                    <i class="fa-regular fa-circle-check"></i>
+                    <p> 6 months free support included</p>
+                  </div>
+                </div>
+              </div>
+
+              <div><a href="">Get it now</a></div>
+            </div>
+            <div class="option-right">
+              <div class="top">
+                <div class="option-contain">
+                  <div class="option-header">
+                    <span class="">Enterprise</span>
+                  </div>
+                  <div>
+                    <p>We offer variable pricing with discounts for larger organizations. Get in touch with us and we’ll
+                      figure out something that works for everyone.</p>
+                  </div>
+                </div>
+              </div>
+
+              <div><a href="">
+                  Contact us
+                </a></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="faq-main-content">
+      <div class="container">
+        <div class="contain-wrapper">
+
+          <div class="faq-contain-wrapper">
+            <div class="content">
+              <div class="content-icon">
+                <i class="fa-solid fa-circle-question"></i>
+              </div>
+              <div>
+                <h4>
+                  Can I use Landkit for my clients?</h4>
+                <p>
+                  Absolutely. The Bootstrap Themes license allows you to build a website for personal use or for a
+                  client.</p>
+              </div>
+            </div>
+            <div class="content">
+              <div class="content-icon">
+                <i class="fa-solid fa-circle-question"></i>
+              </div>
+              <div>
+                <h4>Do I get free updates?</h4>
+                <p>
+                  Yes. We update all of our themes with each Bootstrap update, plus are constantly adding new
+                  components, pages, and features to our themes.</p>
+              </div>
+            </div>
+          </div>
+          <div class="faq-contain-wrapper">
+            <div class="content">
+              <div class="content-icon">
+                <i class="fa-solid fa-circle-question"></i>
+              </div>
+              <div>
+                <h4>Is there a money back guarantee?</h4>
+                <p>
+                  Yup! Bootstrap Themes come with a satisfaction guarantee. Submit a return and get your money back.</p>
+              </div>
+            </div>
+            <div class="content">
+              <div class="content-icon">
+                <i class="fa-solid fa-circle-question"></i>
+              </div>
+              <div>
+                <h4>Does it work with Rails? React? Laravel?</h4>
+                <p>
+                  Yes. Landkit has basic CSS/JS files you can include. If you want to enable deeper customization, you
+                  can integrate it into your assets pipeline or build processes.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <section class="faq-bottom-container">
+      <div class="container">
+        <div class="faq-contain">
+          <div class="option-wrapper-top">
+            <div class="option-header">
+              <span>Get started</span>
+            </div>
+            <h2>Get Landkit and save your time.</h2>
+            <p>Stop wasting time trying to do it the "right way" and build a site from scratch. Landkit is faster,
+              easier, and you still have complete control.
+            </p>
+            <a href="">Buy it now <span><i class="fa-solid fa-arrow-right"></i></i></span> </a>
           </div>
         </div>
       </div>
