add media query

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         <a href="">
           <img src="./images/brand.svg" alt="" />
         </a>
-
+        <button class="navbar-toggler">
+          <i class="fas fa-bars"></i>
+        </button>
         <div class="header-menu">
           <ul>
             <li>Landings</li>
@@ -62,6 +64,7 @@
           </div>
         </div>
     </section>
+
     <section class="max-content">
       <div class="container">
         <div class="contain-wrapper">
@@ -97,6 +100,7 @@
         </div>
       </div>
     </section>
+
     <section class="max-contain-wrapper">
       <div class="container">
         <div class="main-contain-wrapper">
@@ -121,11 +125,12 @@
         </div>
       </div>
     </section>
+
     <section class="cart-container">
       <div class="container">
         <div class="main-cart-wrapper-top">
           <div class="cart-left">
-            <img src="./images/cart_image.avif" alt="" width="500px">
+            <img src="./images/cart_image.avif" alt="">
             <div class="card-body">
               <form action="">
                 <div class="contain-input">
@@ -145,9 +150,9 @@
             </div>
           </div>
 
-          
+
           <div class="cart-right">
-            <h2>The most useful resource <span>ever created for founders.|</span></h2>
+            <h2>The most useful resource <br> <span>ever created for founders.|</span></h2>
             <p>Using Landkit to build your site means never worrying about designing another page or cross browser
               compatibility. Our ever-growing library of components and pre-designed layouts will make your life easier.
             </p>
@@ -177,7 +182,10 @@
         </div>
         <div class="main-cart-wrapper-bottom">
           <div class="bottom-left">
-            <h2>We have lots of experience <span>building Bootstrap themes.</span></h2>
+            <h2>We have lots of experience
+              <br>
+              <span>building Bootstrap themes.</span>
+            </h2>
             <p>We've built well over a dozen Bootstrap themes and sold tens of thousands of copies.</p>
             <div class="contain-all">
               <div class="contain-left">
@@ -203,6 +211,7 @@
         </div>
       </div>
     </section>
+
     <section class="slid-container">
       <div class="container">
         <div class="slider-container">
@@ -347,6 +356,7 @@
         </div>
       </div>
     </section>
+
     <section class="faq-main-content">
       <div class="container">
         <div class="contain-wrapper">
