add responsive media query

--- a/index.html
+++ b/index.html
@@ -149,8 +149,6 @@
               </form>
             </div>
           </div>
-
-
           <div class="cart-right">
             <h2>The most useful resource <br> <span>ever created for founders.|</span></h2>
             <p>Using Landkit to build your site means never worrying about designing another page or cross browser
@@ -233,14 +231,15 @@
                 again for my next project.”
               </p>
               <p><span>Dave Gamache</span></p>
+              <button class="left-arrow">
+                <i class="fa-solid fa-circle-arrow-left"></i>
+              </button>
+              <button class="right-arrow">
+                <i class="fa-solid fa-circle-arrow-right"></i>
+              </button>
             </div>
 
-            <button class="left-arrow">
-              <i class="fa-solid fa-circle-arrow-left"></i>
-            </button>
-            <button class="right-arrow">
-              <i class="fa-solid fa-circle-arrow-right"></i>
-            </button>
+
           </div>
         </div>
       </div>
@@ -251,7 +250,7 @@
       <div class="container">
         <div class="main-cart-wrapper">
           <div class="bottom-left">
-            <h2>Stay focused on your business. <span>Let us handle the design.</span></h2>
+            <h2>Stay focused on your business. <br><span>Let us handle the design.</span></h2>
             <p>You have a business to run. Stop worring about cross-browser bugs, designing new pages, keeping your
               components up to date. Let us do that for you.</p>
             <div class="contain-all">
